kubernetes/ingress.in.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tracontent
  annotations:
    !If
      test: !Var ingress_letsencrypt_enabled
      then:
        certmanager.k8s.io/cluster-issuer: !Var ingress_letsencrypt_cluster_issuer
        ingress.kubernetes.io/ssl-redirect: "true"
        kubernetes.io/tls-acme: "true"
spec:
  tls:
    - !If
        test: !Var ingress_letsencrypt_enabled
        then:
          hosts: !Var ingress_public_hostnames
          secretName: ingress-letsencrypt
  rules:
    !Loop
      over: !Var ingress_public_hostnames
      as: hostname
      template:
        host: !Var hostname
        http:
          paths:
            - path: /static
              backend:
                serviceName: nginx
                servicePort: 80
            - path: /media
              backend:
                serviceName: nginx
                servicePort: 80
            - path: /
              backend:
                serviceName: tracontent
                servicePort: 8000
